[project]
name = "solareclipseproject"
version = "1.0.5"
description = "Solar Eclipse Programming in Python"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Irsyad (i230010)" }
]
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]

dependencies = [
    "skyfield",
    "numpy",
    "vector",
    "scipy",
    "plotly",
    "pandas",
    "kaleido",
]
