[project]
name = "solareclipseproject"
version = "1.0.5"
description = "Solar Eclipse Programming in Python"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Irsyad (i230010)" }
]
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]

dependencies = [
    "kaleido>=1.2.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "skyfield>=1.53",
    "vector>=1.7.0",
]
