[project]
name = "solareclipseproject"
version = "1.0.7"
description = "Solar Eclipse computations in Python"
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Irsyad", email = "" }
]

license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "skyfield>=1.53",
    "vector>=1.7.0",
]
